--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -430,19 +430,6 @@
     background-color: rgba(154, 160, 166, 0.157);
   }
   
-  @media (max-width: 768px) {
-    .sidebar {
-      display: none;
-    }
-    
-    .main-content {
-      width: 100%;
-    }
-  
-    .note-grid {
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    }
-  }
 
 
   .note-input {
@@ -569,4 +556,36 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
+  }
+
+  @media (max-width: 768px) {
+    .sidebar {
+      display: none;
+    }
+    
+    .main-content {
+      width: 100%;
+    }
+  
+    .note-grid {
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+
+  }
+
+  @media (min-width:350px) and (max-width:490px) {
+    .note-input{
+      width: 350px;
+    }
+    .note-form{
+      width: 350px;
+    }
+  }
+  @media (min-width:491px) and (max-width:650px) {
+    .note-input{
+      width: 450px;
+    }
+    .note-form{
+      width: 450px;
+    }
   }
